# FIXI_2.0

fixi/: package.xml  setup.cfg  setup.py
fixi_camera/: README.md  package.xml  setup.cfg  setup.py
fixi_camera/config/: camera.yaml
fixi_camera/fixi_camera/: __init__.py  camera_node.py
fixi_camera/launch/: camera.launch.py
fixi_camera/test/: test_copyright.py  test_flake8.py  test_pep257.py
fixi_description/: CMakeLists.txt  README.md  package.xml
fixi_description/launch/: display.launch.py
fixi_description/meshes/: README.md
fixi_description/rviz/: fixi.rviz
fixi_description/urdf/: fixi.gazebo.xacro  fixi.urdf.xacro
fixi_detector/: package.xml  setup.cfg  setup.py
fixi_detector/fixi_detector/: detector_node.py  pick_and_place.py  visual_servo_node.py
fixi_detector/launch/: detector.launch.py
fixi_gazebo/: package.xml  setup.cfg  setup.py
fixi_gazebo/config/: ros2_controllers.yaml
fixi_gazebo/launch/: gazebo.launch.py
fixi_gazebo/models/plastic_bottle/: model.config  model.sdf
fixi_gazebo/worlds/: fixi_world.sdf
fixi_interfaces/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fixi_interfaces/config/: README.md
fixi_interfaces/fixi_interfaces/: __init__.py
fixi_interfaces/launch/: README.md
fixi_interfaces/msg/: BottleArray.msg  BottleDetection.msg  TargetBottle.msg
fixi_interfaces/srv/: DropBottle.srv  PickBottle.srv
fixi_moveit_config/: CMakeLists.txt  package.xml
fixi_moveit_config/config/: fixi_bottle.srdf  joint_limits.yaml  moveit_controllers.yaml
fixi_moveit_config/launch/: move_group.launch.py
